--- a/First/views/login.pug
+++ b/First/views/login.pug
@@ -22,4 +22,4 @@ html(lang="en")
                     a(style="color: blue") Username/Password
             div.centerW
                     p Don't have an account?
-                    p(style="color: red") Sign Up Now
+                    p(style="color: red") Sign Up Now Now
